--- a/modules/app/package.json
+++ b/modules/app/package.json
@@ -15,13 +15,17 @@
   "dependencies": {
     "@linaria/core": "^4.2.8",
     "@linaria/react": "^4.3.6",
-    "@poc/theme": "workspace:^1.0.0",
     "@poc/components": "workspace:^1.0.0",
+    "@poc/theme": "workspace:^1.0.0",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.4",
+    "@babel/preset-flow": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.4",
     "@linaria/stylelint-config-standard-linaria": "^4.1.5",
     "@linaria/vite": "^4.2.9",
     "@types/react": "^18.0.28",
