--- a/modules/theme/package.json
+++ b/modules/theme/package.json
@@ -13,12 +13,12 @@
   },
   "dependencies": {
     "deepmerge": "4.3.1",
-    "@linaria/core": "^4.2.8"
+    "@emotion/css": "^11.10.6"
   },
   "devDependencies": {
     "react": "^18.2.0"
   },
   "peerDependencies": {
-    "@linaria/core": "^4.2.8"
+    "@emotion/css": "^11.10.6"
   }
 }
