--- a/modules/app/package.json
+++ b/modules/app/package.json
@@ -13,21 +13,15 @@
     "lint:css": "stylelint src/**/*.tsx"
   },
   "dependencies": {
-    "@linaria/core": "^4.2.8",
-    "@linaria/react": "^4.3.6",
+    "@emotion/css": "^11.10.6",
+    "@emotion/react": "^11.10.6",
     "@poc/components": "workspace:^1.0.0",
     "@poc/theme": "workspace:^1.0.0",
-    "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.4",
-    "@babel/preset-flow": "^7.21.4",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.21.4",
-    "@linaria/stylelint-config-standard-linaria": "^4.1.5",
-    "@linaria/vite": "^4.2.9",
+    "@emotion/babel-plugin": "^11.10.6",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
