--- a/modules/app/tsconfig.node.json
+++ b/modules/app/tsconfig.node.json
@@ -4,7 +4,9 @@
         "skipLibCheck": true,
         "module": "ESNext",
         "moduleResolution": "node",
-        "allowSyntheticDefaultImports": true
+        "allowSyntheticDefaultImports": true,
+        "jsx": "react-jsx",
+        "jsxImportSource": "@emotion/react"
     },
     "include": ["vite.config.ts"]
 }
