--- a/modules/components/package.json
+++ b/modules/components/package.json
@@ -12,13 +12,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@linaria/core": "^4.2.8",
+    "@emotion/css": "^11.10.6",
+    "@emotion/react": "^11.10.6",
     "@poc/theme": "workspace:^1.0.0"
   },
   "devDependencies": {
     "react": "^18.2.0"
-  },
-  "peerDependencies": {
-    "@linaria/core": "^4.2.8"
   }
 }
