--- a/modules/components/tsconfig.json
+++ b/modules/components/tsconfig.json
@@ -5,6 +5,7 @@
     "rootDir": "src/",
     "outDir": "lib/",
     "composite": true,
+    "tsBuildInfoFile": "lib/tsconfig.tsbuildinfo",
     "skipLibCheck": true,
     "target": "ESNext",
     "module": "ESNext",
