--- a/modules/theme/package.json
+++ b/modules/theme/package.json
@@ -2,17 +2,18 @@
   "name": "@poc/theme",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.ts",
+  "type": "module",
+  "module": "src/index.ts",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "build": "tsc"
   },
   "dependencies": {
-    "deepmerge": "4.3.1"
+    "@emotion/react": "^11.10.6",
+    "@types/lodash": "^4.14.194",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "react": "^18.2.0"
