--- a/modules/components/tsconfig.json
+++ b/modules/components/tsconfig.json
@@ -16,7 +16,7 @@
     "sourceMap": true,
     "noEmit": false
   },
-  "include": ["src/**/*.ts*"],
+  "include": ["src/**/*.ts*", "../theme/src/themeToStyle.tsx"],
   "exclude": [
     "lib",
     "node_modules",
