--- a/modules/components/package.json
+++ b/modules/components/package.json
@@ -12,11 +12,14 @@
     "build": " tsc"
   },
   "dependencies": {
-    "@poc/theme": "workspace:^1.0.0",
-    "@emotion/react": "^11.10.6"
+    "@poc/theme": "workspace:^1.0.0"
   },
   "devDependencies": {
     "react": "^18.2.0",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.2",
+    "@emotion/react": "^11.10.6"
+  },
+  "peerDependencies": {
+    "@emotion/react": "^11.10.6"
   }
 }
