--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "scripts": {
+    "dev": "pnpm --filter @poc/app run dev"
+  },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
