--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "jsxImportSource": "@emotion/react",
     "paths": {
       "@poc/app": ["./modules/app/src/index.ts"],
       "@poc/theme": ["./modules/theme/src/index.ts"],
