--- a/modules/theme/package.json
+++ b/modules/theme/package.json
@@ -2,21 +2,21 @@
   "name": "@poc/theme",
   "version": "1.0.0",
   "description": "",
-  "module": "src/index.js",
+  "type": "module",
+  "main": "lib/index.js",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "build": "tsc"
   },
   "dependencies": {
     "deepmerge": "4.3.1",
     "@emotion/css": "^11.10.6"
   },
   "devDependencies": {
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "typescript": "^5.0.2"
   },
   "peerDependencies": {
     "@emotion/css": "^11.10.6"
