--- a/modules/theme/tsconfig.json
+++ b/modules/theme/tsconfig.json
@@ -1,6 +1,25 @@
 {
   "extends": "../../tsconfig.json",
-
-  "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "compilerOptions": {
+    "baseUrl": "./",
+    "rootDir": "src/",
+    "outDir": "lib/",
+    "composite": true,
+    "tsBuildInfoFile": "lib/tsconfig.tsbuildinfo",
+    "skipLibCheck": true,
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "jsx": "react-jsx",
+    "sourceMap": true,
+    "noEmit": false
+  },
+  "include": ["src/**/*.ts*"],
+  "exclude": [
+    "lib",
+    "node_modules",
+    "src/**/*.test.tsx",
+    "src/**/*.stories.tsx"
+  ]
 }
